Cleaning package. Fixed reference measure from now on. Better numerical integration scheme.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(dist)
 export(distance)
 export(gmd)
 export(kmeans)
+export(mean_expval)
+export(mean_k)
 export(sgd)
 importFrom(Rcpp,sourceCpp)
 importFrom(magrittr,"%>%")
