Bug fixes and code factoring.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,9 @@ S3method(plot,sgd)
 export(align_gmm)
 export(dist)
 export(distance)
+export(get_mean_raw_moment)
 export(gmd)
 export(kmeans)
-export(mean_expval)
-export(mean_k)
 export(sgd)
 importFrom(Rcpp,sourceCpp)
 importFrom(magrittr,"%>%")
