--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,11 @@ Collate:
 Imports: 
     rlang,
     purrr,
-    Rcpp
+    Rcpp,
+    RcppNumerical,
+    dplyr,
+    tidyr
 LinkingTo: 
-    Rcpp
+    Rcpp,
+    RcppEigen,
+    RcppNumerical
