--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(mean,gmd)
 S3method(mean,sgd)
 S3method(plot,sgd)
 export(align_gmm)
+export(aligned_dist)
 export(dgmm)
 export(dist)
 export(get_mean_raw_moment)
